About page is ready just need to polish and spacing issue fixed..

--- a/src/styles/_value.scss
+++ b/src/styles/_value.scss
@@ -53,9 +53,7 @@
     display: flex;
     flex-direction: column;
     max-width: 420px;
-        padding: var(--sp-32);
-
-
+    padding: var(--sp-32);
     &.card-secondary .card-icon {
       width: 54px;
     height: 54px;
@@ -74,6 +72,8 @@
 }
 
 @media (max-width: 450px) {
-  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 0px;
 }
 }
